objects/ReportUploadToDrive__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Client_secret__c</fullName>
        <label>Client secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_Id__c</fullName>
        <label>contact info Drive Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Id_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Folder Id Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <label>Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh_Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Report_Drive_Id__c</fullName>
        <label>Survey Report Drive Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ReportUploadToDrive</label>
</CustomObject>